@@ -1,3 +1,6 @@
+6.sep (la)
+      - fix 12218: shaped noteheads aren't shared
+      - fix 12419: Ledger lines are still visible for invisible notes
 3.sep (lv)
       - fix #12276: MusicXML import: sub-optimal handling of different duration measures
       (la)
